fix cursor to pointer on small screens

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -189,6 +189,7 @@ dd {
 
     .menu-button {
         padding-right: 16px;
+        cursor: pointer;
     }
 
     .menu-button i {
